--- a/GUI_Y1_Y2_diffmodels.ipynb
+++ b/GUI_Y1_Y2_diffmodels.ipynb
@@ -25,8 +25,8 @@
     "import os\n",
     "\n",
     "# Load the models\n",
-    "model_path_xgb1 = \"C:/Users/asus1/Desktop/XGB1.joblib\"\n",
-    "model_path_rf2 = \"C:/Users/asus1/Desktop/RF2.joblib\"\n",
+    "model_path_xgb1 = \"C:/Users/..../..../XGB1.joblib\"\n",
+    "model_path_rf2 = \"C:/Users/..../..../RF2.joblib\"\n",
     "\n",
     "if os.path.exists(model_path_xgb1):\n",
     "    model_xgb1 = joblib.load(model_path_xgb1)\n",
