--- a/GUI.ipynb
+++ b/GUI.ipynb
@@ -71,8 +71,8 @@
     "    'X1: Area of steel tube (As, mm^2)',\n",
     "    'X2: Yield strength of steel tube (fy, Mpa)',\n",
     "    'X3: Area of concrete core (Ac, mm^2)',\n",
-    "    'X4: Unconfined concrete strength (fc, mm Mpa)',\n",
-    "    'X5: Total thickness of FRP multiplied by its elastic modulus (tf.Ef, Mpa)'\n",
+    "    'X4: Unconfined concrete strength (fc, Mpa)',\n",
+    "    'X5: Total thickness of FRP multiplied by its elastic modulus (tf.Ef, mm Mpa)'\n",
     "]\n",
     "for i, text in enumerate(param_labels):\n",
     "    entries[text] = create_label_entry(frame, text, i+4, 0)\n",
